ubuntu-rootfs/etc/iptables/rules.v4
# Generated by iptables-save v1.6.1 on Mon Sep  4 12:43:17 2023
*raw
:PREROUTING ACCEPT [246661:528806266]
:OUTPUT ACCEPT [186781:164714143]
COMMIT
# Completed on Mon Sep  4 12:43:17 2023
# Generated by iptables-save v1.6.1 on Mon Sep  4 12:43:17 2023
*nat
:PREROUTING ACCEPT [207:17015]
:INPUT ACCEPT [82:9835]
:OUTPUT ACCEPT [1100:94884]
:POSTROUTING ACCEPT [1100:94884]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 192.168.55.0/24 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Mon Sep  4 12:43:17 2023
# Generated by iptables-save v1.6.1 on Mon Sep  4 12:43:17 2023
*mangle
:PREROUTING ACCEPT [246667:528807274]
:INPUT ACCEPT [244510:528083984]
:FORWARD ACCEPT [2111:717973]
:OUTPUT ACCEPT [186787:164715199]
:POSTROUTING ACCEPT [188924:165437098]
COMMIT
# Completed on Mon Sep  4 12:43:17 2023
# Generated by iptables-save v1.6.1 on Mon Sep  4 12:43:17 2023
*filter
:INPUT ACCEPT [132813:271035486]
:FORWARD ACCEPT [2111:717973]
:OUTPUT ACCEPT [103260:147820696]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Mon Sep  4 12:43:17 2023
